Updates version of Java